Thu Aug  5 22:09:30 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_ctime): Pathname#ctime translated from
	  pathname.rb.

Thu Aug  5 21:20:31 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (NODE_ARGSCAT, NODE_ARGSPUSH): drop unused ARGSCAT
	  results when poped is true.  [ruby-dev:41933], [Bug #3658]
	  This is retry of r28870 and r28873 which were reverted.

Thu Aug  5 20:13:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT, README.EXT.ja (String functions): mention
	  rb_str_resize and rb_str_set_len.

Thu Aug  5 19:59:55 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_set_len): bail out when buffer overflowed
	  probably.

Thu Aug  5 18:36:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (nucomp_marshal_load): should check the argument.
	  [ruby-core:31622]

	* rational.c (nurat_marshal_load): ditto

	* marshal.c (w_float): should not append a dot if no fractal part
	  exists.  [ruby-dev:41936]

Thu Aug  5 17:11:43 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (void_expr_gen): add 'possibly' to warning message.
	  [ruby-core:31611]

Thu Aug  5 16:57:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_make_pattern): fold continuous PLAINs to get rid of
	  snail at too deep path.  [ruby-dev:41871]

Thu Aug  5 16:42:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_set_len): should fail to modify shared string.

Thu Aug  5 14:12:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): ensure sopath to be modifiable

Thu Aug  5 12:39:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_make_independent_expand): fix buffer overflow
	  while shrinking.

Thu Aug  5 06:42:31 2010  Tanaka Akira  <akr@fsij.org>

	* file.c (realpath_rec): call rb_str_modify before rb_str_set_len.

Wed Aug  4 19:37:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_set_len): rb_str_modify cannot work before the